@@ -626,32 +626,32 @@ The resulting output document will be as follows:
 
   <p>This command-line tool gives you access to the Packager plugins. It can <em>ingest</em> a package to create a new DSpace Item, or <em>disseminate</em> an Item as a package.</p>
 
- <p>To see all the options, invoke it as: <pre><em>[dspace]</em>/bin/dsrun org.dspace.app.packager.Packager --help</pre> This mode also displays a list of the names of package ingesters and disseminators that are available.</p>
+ <p>To see all the options, invoke it as: <pre><em>[dspace]</em>/bin/packager --help</pre> This mode also displays a list of the names of package ingesters and disseminators that are available.</p>
 
  <h3>Ingesting</h3>
 
- <p>To ingest a package from a file, give the command: <pre><em>[dspace]</em>/bin/dsrun org.dspace.app.packager.Packager -e <em>user</em> -c <em>handle</em> -t <em>packager</em> <em>path</em></pre>
+ <p>To ingest a package from a file, give the command: <pre><em>[dspace]</em>/bin/packager -e <em>user</em> -c <em>handle</em> -t <em>packager</em> <em>path</em></pre>
 Where <em>user</em> is the e-mail address of the E-Person under whose authority this runs; <em>handle</em> is the Handle of the collection into which the Item is added, <em>packager</em> is the plugin name of the
 package ingester to use, and <em>path</em> is the path to the file to ingest (or <code>"-"</code> to read from the standard input).</p>
 
  <p>Here is an example that loads a PDF file with internal metadata as a package:
- <pre>/dspace/bin/dsrun org.dspace.app.packager.Packager -e florey@mit.edu -c 1721.2/13  -t pdf thesis.pdf</pre>
+ <pre>/dspace/bin/packager -e florey@mit.edu -c 1721.2/13  -t pdf thesis.pdf</pre>
  </p>
 
  <p>This example takes the result of retrieving a URL and ingests it:
 <pre>wget -O - http://alum.mit.edu/jarandom/my-thesis.pdf | \
-/dspace/bin/dsrun org.dspace.app.packager.Packager -e florey@mit.edu -c 1721.2/13  -t pdf -</pre></p>
+/dspace/bin/packager -e florey@mit.edu -c 1721.2/13  -t pdf -</pre></p>
 
  <h3>Disseminating</h3>
 
  <p>To disseminate an Item as a package, give the command:
- <pre><em>[dspace]</em>/bin/dsrun org.dspace.app.packager.Packager -e <em>user</em> -d -i <em>handle</em> -t   <em>packager</em> <em>path</em></pre> Where <em>user</em> is the e-mail address of the E-Person under whose
+ <pre><em>[dspace]</em>/bin/packager -e <em>user</em> -d -i <em>handle</em> -t   <em>packager</em> <em>path</em></pre> Where <em>user</em> is the e-mail address of the E-Person under whose
 authority this runs; <em>handle</em> is the Handle of the Item to disseminate;
 <em>packager</em> is the plugin name of the package disseminator to use; and <em>path</em> is the path to the file to
 create (or <code>"-"</code> to write to the standard output).
 
 This example writes an Item out as a METS package in the file "454.zip":
-<pre>/dspace/bin/dsrun org.dspace.app.packager.Packager -e florey@mit.edu -d -i 1721.2/454 -t METS 454.zip</pre></p>
+<pre>/dspace/bin/packager -e florey@mit.edu -d -i 1721.2/454 -t METS 454.zip</pre></p>
 
  <h3>METS packages</h3>
 
@@ -713,26 +713,26 @@ archive_directory/
 
   <p><strong>Note:</strong> Before running the item importer over items previously exported from a DSpace instance, please first refer to <a href="application.html#transferitem">Transferring Items Between DSpace Instances</a>.</p>
 
-  <p>The item importer is in <code>org.dspace.app.itemimport.ItemImport</code>, and is run with the <code>dsrun</code> utility in the <code>dspace/bin</code> directory. Running it with -h gets the current command-line arguments. Another very important flag is the --test flag, which you can use with any command to simulate all of the actions it will perform without actually making any changes to your DSpace instance - very useful for validating your item directories before doing an import. In the importer's arguments you can use either the user's database ID or email address and the eperson ID, and the collection's database ID or handle as arguments. Currently with the importer you can add, remove, and replace items in a collection. If you specify more than one collection argument then the items will be imported to multiple collections, and the first collection specified becomes the "owning" collection. If there is an error and the import is aborted, there is a --resume flag that you can try to resume the import where you left off after you fix the error.</p>
+  <p>The item importer is in <code>org.dspace.app.itemimport.ItemImport</code>, and is run with the <code>import</code> utility in the <code>dspace/bin</code> directory. Running it with -h gets the current command-line arguments. Another very important flag is the --test flag, which you can use with any command to simulate all of the actions it will perform without actually making any changes to your DSpace instance - very useful for validating your item directories before doing an import. In the importer's arguments you can use either the user's database ID or email address and the eperson ID, and the collection's database ID or handle as arguments. Currently with the importer you can add, remove, and replace items in a collection. If you specify more than one collection argument then the items will be imported to multiple collections, and the first collection specified becomes the "owning" collection. If there is an error and the import is aborted, there is a --resume flag that you can try to resume the import where you left off after you fix the error.</p>
 
   <p>To add items to a collection with an EPerson as the submitter, type:</p>
   <pre>
-dsrun org.dspace.app.itemimport.ItemImport --add --eperson=joe@user.com  --collection=collectionID --source=items_dir --mapfile=mapfile
+[dspace]/bin/import --add --eperson=joe@user.com  --collection=collectionID --source=items_dir --mapfile=mapfile
 </pre>
 
   <p>(or by using the short form)</p>
   <pre>
-dsrun org.dspace.app.itemimport.ItemImport -a -e joe@user.com  -c collectionID -s items_dir -m mapfile
+[dspace]/bin/import -a -e joe@user.com  -c collectionID -s items_dir -m mapfile
 </pre>
 
   <p>which would then cycle through the archive directory's items, import them, and then generate a map file which stores the mapping of item directories to item handles. Save this map file! Using the map file you can then 'unimport' with the command:</p>
   <pre>
-dsrun org.dspace.app.itemimport.ItemImport --delete --mapfile=mapfile
+[dspace]/bin/import --delete --mapfile=mapfile
 </pre>
 
   <p>The imported items listed in the map file would then be deleted. If you wish to replace previously imported items, you can give the command:</p>
   <pre>
-dsrun org.dspace.app.itemimport.ItemImport --replace --eperson=joe@user.com --collection=collectID --source=items_dir --mapfile=mapfile
+[dspace]/bin/import --replace --eperson=joe@user.com --collection=collectID --source=items_dir --mapfile=mapfile
 </pre>
 
   <p>Replacing items uses the map file to replace the old items and still retain their handles.</p>
@@ -745,12 +745,12 @@ dsrun org.dspace.app.itemimport.ItemImport --replace --eperson=joe@user.com --co
 
   <p>The item exporter can export a single item or a collection of items, and creates a DSpace simple archive for each item to be exported. To export a collection's items you type:</p>
   <pre>
-dsrun org.dspace.app.itemexport.ItemExport --type=COLLECTION --id=collID --dest=dest_dir --number=seq_num
+[dspace]/bin/export --type=COLLECTION --id=collID --dest=dest_dir --number=seq_num
 </pre>
 
   <p>The keyword <code>COLLECTION</code> means that you intend to export an entire collection. The ID can either be the database ID or the handle. The exporter will begin numbering the simple archives with the sequence number that you supply. To export a single item use the keyword <code>ITEM</code> and give the item ID as an argument:</p>
   <pre>
-dsrun org.dspace.app.itemexport.ItemExport --type=ITEM --id=itemID --dest=dest_dir --number=seq_num
+[dspace]/bin/export --type=ITEM --id=itemID --dest=dest_dir --number=seq_num
 </pre>
 
   <p>Each exported item will have an additional file in its directory, named 'handle'. This will contain the handle that was assigned to the item, and this file will be read by the importer so that items exported and then imported to another machine will retain the item's original handle.</p>
